# agent-plan-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agent_plan/: __init__.py
src/agent_plan_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_plan.py
