[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-plan-py"
description = "Multi-step plan executor with dependency tracking for agent workflows"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["agent", "workflow", "dag", "dependency", "task", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agent-plan-py"
Repository = "https://github.com/MukundaKatta/agent-plan-py"
Issues = "https://github.com/MukundaKatta/agent-plan-py/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_plan = ["py.typed"]
